--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,1 +1,19 @@
 @import "~bootstrap/scss/bootstrap";
+
+$fa-font-path : "~@fortawesome/fontawesome-free/webfonts";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+
+.results {
+  .item {
+    i.download {
+      cursor: pointer;
+    }
+
+    i.download:hover {
+      color: $primary;
+    }
+  }
+}
