html template / root has title

--- a/index.ejs
+++ b/index.ejs
@@ -2,10 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>INSERT APP NAME HERE</title>
+        <title>xdcc</title>
     </head>
     <body>
-        <div id="feed"></div>
         <div id="app"></div>
     </body>
 </html>
