transfer items have icons

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -6,12 +6,13 @@ $fa-font-path : "~@fortawesome/fontawesome-free/webfonts";
 @import "~@fortawesome/fontawesome-free/scss/brands";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 
+.results > .item > div > div {
+  max-width: 90%;
+  min-width: 60%;
+}
+
 .results {
   .item {
-    div > div {
-      max-width: 90%;
-    }
-
     i.download {
       cursor: pointer;
     }
