styling: search result item width

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -8,7 +8,7 @@ $fa-font-path : "~@fortawesome/fontawesome-free/webfonts";
 
 .results > .item > div > div {
   max-width: 90%;
-  min-width: 60%;
+  width: 90%;
 }
 
 .results {
